--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-info
+          path: ./
 
       - name: Display build-info.txt content
         run: |
