--- a/.github/workflows/deploy-pipeline.yml
+++ b/.github/workflows/deploy-pipeline.yml
@@ -13,13 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download artifact
+      - name: Download artifact from Build Pipeline
         uses: actions/download-artifact@v4
         with:
           name: build-info
+          run-id: ${{ github.event.workflow_run.id }}
           path: ./
 
       - name: Display build-info.txt content
