--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -1,10 +1,14 @@
 name: Build Pipeline
 
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  actions: write
 
 jobs:
   build:
@@ -18,8 +22,9 @@ jobs:
         run: |
           echo "185.0.0" > build-info.txt
 
-      - name: Upload artifact
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: build-info
           path: build-info.txt
+          retention-days: 1
